# library_api_rust

./: .env  Cargo.toml  README.md  diesel.toml  library.db
migrations/2023-10-13-212300_create_genres/: down.sql  up.sql
src/: main.rs
src/api/: books.rs  genres.rs  index.rs  mod.rs
src/database/: db.rs  mod.rs  schema.rs
src/database/models/: genres.rs  mod.rs
