[package]
name = "book_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "^1.1.0", features = ["sqlite", "uuidv07", "chrono"] }
dotenv = "0.9.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

